# audioguide

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: баг-репорт.md  предложение-новой-фичи.md
.zed/: tasks.json
audioguide_bot/: __init__.py  bot.py
strapi-guide/: docker-compose.yml  package.json
strapi-guide/src/api/exhibit/content-types/exhibit/: schema.json
