[tool.poetry]
name = "audioguide-bot"
version = "0.1.0"
description = ""
authors = ["nikolai-in <nikolai.in@tuta.io>", "Aodhogane <Aodhogane@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
python-telegram-bot = "^21.1.1"
pocketbase = { git = "https://github.com/arecowstech/pocketbase.git" }
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
develop = "audioguide_bot:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportOptionalMemberAccess = "warning"
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
